# sunset-tree-sitter

./: .gitignore  Makefile  README.md  go.mod  grammar.js  grammar.md  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_sunset/: __init__.py
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: example  example.sunset
test/corpus/: expression.txt
tree-sitter/: CMakeLists.txt  Cargo.toml  Package.swift  binding.gyp  grammar.js
tree-sitter/bindings/c/: tree-sitter-sunset.pc.in
tree-sitter/bindings/c/tree_sitter/: tree-sitter-sunset.h
tree-sitter/bindings/go/: binding.go
tree-sitter/bindings/python/tests/: test_binding.py
tree-sitter/bindings/python/tree_sitter_sunset/: binding.c
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/bindings/swift/TreeSitterSunsetTests/: TreeSitterSunsetTests.swift
tree-sitter/tests/corpus/: expression.txt
